objects/JunoDoc__Doc_Template_Item__c/JunoDoc__Doc_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Doc Template Item</label>
    <nameField>
        <displayFormat>DT-{00000}</displayFormat>
        <label>Doc Template Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Template Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>