objects/JunoDoc__Doc_Template_Item__c/fields/JunoDoc__Page_Render__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Page_Render__c</fullName>
    <label>Page Render</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>