objects/JunoDoc__Doc_Template_Item__c/fields/JunoDoc__Template_Body__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Template_Body__c</fullName>
    <label>Template Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>